gcc/testsuite/rust/rustc/ui/closures/binder/disallow-ty_dg.rs
#![feature(closure_lifetime_binder)]

fn main() {
    for<T> || -> () {};
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

